<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<Button 
	    android:id="@+id/pick_date"
	    android:background="#dddddddd"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/pick_date" 
	    android:onClick="showDatePickerDialog" />   
	    
	<Button 
	    android:id="@+id/pick_time"
	    android:background="#dddddddd"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/pick_time" 
	    android:onClick="showTimePickerDialog" />
	
	<Spinner
	    android:id="@+id/start_spinner"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
	
	<Spinner
	    android:id="@+id/destination_spinner"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
	
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_create"
	    android:onClick="sendMessage" />
     
</LinearLayout>